--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,7 +11,7 @@
 		</div>
 		<div id="titleContainer" class="col-xs-6" style="border: 1px #fff solid; height: 260px; line-height: 260px; text-align: center; background-color: cyan">
 
-			<div id="title" style="display: inline-block; vertical-align: middle; line-height: normal;"><h1>Welcome</h1><h3>to the LoRa + Raspberry PI<br/>uplink/downlink demo</h3></div>
+			<div id="title" style="display: inline-block; vertical-align: middle; line-height: normal;"><h1>Welcome</h1><h3>to the LoRaWAN + Raspberry<br/>SmartBuilding Demo<br/>by Actility</h3></div>
 
 		</div>
 	</div>
